--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "jquery": "~2.1.3",
     "revealjs": "components/revealjs#~2.6.2"
+  },
+  "resolutions": {
+    "jquery": "~2.1.3"
   }
 }
